--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,7 @@ jobs:
   sonar:
     name: Code-Quality Check
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - uses: actions/checkout@v2
       with:
@@ -44,6 +45,8 @@ jobs:
         path: ~/.sonar/cache
         key: ${{ runner.os }}-sonar
         restore-keys: ${{ runner.os }}-sonar
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Cache Gradle packages
       uses: actions/cache@v1
       with:
@@ -58,7 +61,7 @@ jobs:
   build:
     name: Gradle build
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, sonar]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
